--- a/new 1.html
+++ b/new 1.html
@@ -4,34 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KPU Surrey Library ETA</title>
-	<link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css">
     <style>
         #map {
             height: 500px;
             width: 100%;
         }
-		
     </style>
-	
 </head>
 <body>
     <h1>KPU Surrey Library ETA</h1>
     <div id="map"></div>
-	<div class ="info">
-    <p>Your current location: <span id="current-location"></span></p>
-    <p>Distance to KPU Surrey Library: <span id="distance"></span> km</p>
+    <div class="info">
+        <p>Your current location: <span id="current-location"></span></p>
+        <p>Distance to KPU Surrey Library: <span id="distance"></span> km</p>
+    </div>
 
     <script>
         // Initialize Google Maps
         function initMap() {
             var map = new google.maps.Map(document.getElementById('map'), {
-                center: {lat: 49.1867, lng: -122.849},
+                center: { lat: 49.1867, lng: -122.849 },
                 zoom: 15
             });
 
             // Try HTML5 geolocation
             if (navigator.geolocation) {
-                navigator.geolocation.getCurrentPosition(function(position) {
+                navigator.geolocation.getCurrentPosition(function (position) {
                     var pos = {
                         lat: position.coords.latitude,
                         lng: position.coords.longitude
@@ -52,22 +51,23 @@
                     var kpuSurreyLibrary = new google.maps.LatLng(49.1871, -122.8535);
                     var distance = google.maps.geometry.spherical.computeDistanceBetween(pos, kpuSurreyLibrary) / 1000; // in km
                     document.getElementById('distance').innerText = distance.toFixed(2);
-                }, function() {
-                    handleLocationError(true, infoWindow, map.getCenter());
+                }, function () {
+                    handleLocationError(true, map.getCenter());
                 });
             } else {
                 // Browser doesn't support Geolocation
-                handleLocationError(false, infoWindow, map.getCenter());
+                handleLocationError(false, map.getCenter());
             }
         }
 
-        function handleLocationError(browserHasGeolocation, infoWindow, pos) {
+        function handleLocationError(browserHasGeolocation, pos) {
             // Handle error
+            console.log('Error: Geolocation service failed.');
         }
     </script>
     <!-- Load Google Maps API -->
     <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDr7CMYyuvt09XrSyqYrMcFJ4O79CXb9JM&callback=initMap&libraries=geometry&callback=initMap">
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDr7CMYyuvt09XrSyqYrMcFJ4O79CXb9JM&libraries=geometry&callback=initMap">
     </script>
 </body>
 </html>
