--- a/new 1.html
+++ b/new 1.html
@@ -6,9 +6,52 @@
     <title>KPU Surrey Library ETA</title>
     <link rel="stylesheet" href="styles.css">
     <style>
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background-color: #f8f9fa;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+        }
+
+        h1 {
+            color: #007bff;
+            margin-top: 20px;
+        }
+
         #map {
             height: 500px;
-            width: 100%;
+            width: 90%;
+            max-width: 800px;
+            border-radius: 8px;
+            overflow: hidden;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            margin: 20px 0;
+        }
+
+        .info {
+            background-color: #f0f0f0;
+            padding: 20px;
+            border-radius: 8px;
+            width: 90%;
+            max-width: 800px;
+            text-align: center;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        .info p {
+            font-size: 18px;
+            margin: 10px 0;
+            color: #333;
+        }
+
+        .info span {
+            font-weight: bold;
+            color: #28a745;
         }
     </style>
 </head>
